syntax = "proto3";

                 package playerchoiceResponseRewardItemChoice;
service PlayerchoiceResponseRewardItemChoiceService {
 rpc createPlayerchoiceResponseRewardItemChoice (PlayerchoiceResponseRewardItemChoiceCreateInput) returns (PlayerchoiceResponseRewardItemChoice) {}
rpc playerchoiceResponseRewardItemChoices (findManyParams) returns (stream PlayerchoiceResponseRewardItemChoice) {}
rpc playerchoiceResponseRewardItemChoice (PlayerchoiceResponseRewardItemChoiceWhereUniqueInput) returns (PlayerchoiceResponseRewardItemChoice) {}
rpc updatePlayerchoiceResponseRewardItemChoice (PlayerchoiceResponseRewardItemChoiceUpdateInput) returns (PlayerchoiceResponseRewardItemChoice) {}
rpc deletePlayerchoiceResponseRewardItemChoice (PlayerchoiceResponseRewardItemChoiceWhereUniqueInput) returns (PlayerchoiceResponseRewardItemChoice) {} 
 }
message PlayerchoiceResponseRewardItemChoiceCreateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayerchoiceResponseRewardItemChoice {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayerchoiceResponseRewardItemChoiceWhereUniqueInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayerchoiceResponseRewardItemChoiceUpdateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message findManyParams {

};